<resources>
    <string name="app_name">Slam Zoom Image ListView</string>
    <string name="action_settings">Settings</string>

    <string name="btn_use_aync_downloader">Use Aync Downloader\n(Performance slower)</string>
    <string name="btn_use_aync_downloader_with_cache">Use Aync Downloader with Cache\n(Performance better)</string>
    <string name="btn_use_glide_library">Use Glide Library\n(Performance best)</string>
    <string name="btn_use_picasso_library">Use Picasso Library\n(Performance best)</string>
    <string name="btn_exit">Exit</string>

    <string name="hotel_website">Website</string>
    <string name="hotel_call">Call</string>
    <string name="hotel_directions">Directions</string>
    <string name="hotel_share">Share</string>
    <string name="hotel_video">Video</string>

    <!-- Place Share message -->
    <string name="hotel_share_via">Share \"%s\" information via:</string>
    <string name="hotel_share_name">Hotel:</string>
    <string name="hotel_share_website">Website:</string>
    <string name="hotel_share_phone_number">Phone number:</string>
    <string name="hotel_share_address">Address:</string>
    <string name="hotel_share_video">Video:</string>

    <string name="msg_website_not_available">Website not available.</string>
    <string name="msg_phone_number_not_available">Phone number not available.</string>
    <string name="msg_address_not_available">Address not available.</string>
    <string name="msg_sms_not_available">Missing phone number</string>
    <string name="msg_video_not_available">No video to play.</string>

    <!--
        Permissions
    -->
    <string name="permission_location_required">Access to the Location service is required for the app to find your current location on the map.</string>
    <string name="permission_contacts_required">Access to the device Contacts service is required for the app to show you the contact list on your device.</string>
    <string name="permission_phone_required">Access to the Phone service is required for the app to make phone calls.</string>
    <string name="permission_sms_required">Access to the SMS service is required for the app to send and receive text messages.</string>
    <string name="location_permission_denied">This example requires location permission to be enabled.</string>

</resources>
