<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <!--TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" /-->

    <!--
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="45dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_use_aync_downloader"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_rounded_corners_green"
            android:text="@string/btn_use_aync_downloader" />

        <Button
            android:id="@+id/btn_use_aync_downloader_with_cache"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:textAllCaps="false"
            android:elevation="10dp"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_rounded_corners_green"
            android:text="@string/btn_use_aync_downloader_with_cache" />

        <Button
            android:id="@+id/btn_use_glide_library"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_rounded_corners_green"
            android:text="@string/btn_use_glide_library" />

        <Button
            android:id="@+id/btn_use_picasso_library"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_rounded_corners_green"
            android:text="@string/btn_use_picasso_library" />

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_rounded_corners_red"
            android:text="@string/btn_exit" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>

