<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/viewsContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ncLtGray3">

    <!--
        https://leftshift.io/6-ways-to-make-your-lists-scroll-faster-than-the-wind
        Scrolling cache is basically a drawing cache.
        By default, a drawing cache is disabled because it takes up memory but you
        can ask the View to explicitly to create one either via setDrawingCacheEnabled
        or through hardware layers (setLayerType).  So why is it useful? Because using
        a drawing cache make your animation smooth compared to redrawing the view at every frame.


        The disadvantage of using drawing cache is it consumes memory which is why by default
        it is turned off. In the case of ListView, the cache automatically created for you as
        soon as you touch the ListView and move a little (to differentiate a tap from scroll).
        In other words, as soon as ListView thinks you are about to scroll/fling it will create
        a scroll cache for you to animate the scroll/fling motion.
    -->>
    <ListView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/listViewHotels"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:choiceMode="singleChoice"
        android:listSelector="@color/ncLtBlue1"
        android:visibility="visible"
        android:scrollingCache="false"
        android:animationCache="false"
        android:dividerHeight="1dp">
    </ListView>

    <LinearLayout
        android:id="@+id/fullImageViewLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100"
        android:visibility="invisible"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="12"
            android:layout_marginTop="5dp" >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:orientation="vertical" >
                    <ImageView
                        android:id="@+id/image_hotel_website"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:paddingBottom="5dp"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:gravity="center_horizontal"
                        android:src="@drawable/ic_hotel_website" />

                    <TextView
                        android:id="@+id/tv_hotel_website"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:textSize="14dp"
                        android:text="@string/hotel_website" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:orientation="vertical" >
                    <ImageView
                        android:id="@+id/image_hotel_phone"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:paddingBottom="5dp"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:gravity="center_horizontal"
                        android:src="@drawable/ic_hotel_phone" />

                    <TextView
                        android:id="@+id/tv_hotel_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:textSize="14dp"
                        android:text="@string/hotel_call" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:orientation="vertical" >
                    <ImageView
                        android:id="@+id/image_hotel_directions"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:paddingBottom="5dp"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:gravity="center_horizontal"
                        android:src="@drawable/ic_hotel_directions" />

                    <TextView
                        android:id="@+id/tv_hotel_directions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:textSize="14dp"
                        android:text="@string/hotel_directions" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:orientation="vertical" >
                    <ImageView
                        android:id="@+id/image_hotel_share"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:paddingBottom="5dp"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:gravity="center_horizontal"
                        android:src="@drawable/ic_hotel_share" />

                    <TextView
                        android:id="@+id/tv_hotel_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:textSize="14dp"
                        android:text="@string/hotel_share" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:orientation="vertical" >
                    <ImageView
                        android:id="@+id/image_hotel_video"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:paddingBottom="5dp"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:gravity="center_horizontal"
                        android:src="@drawable/ic_hotel_video" />

                    <TextView
                        android:id="@+id/tv_hotel_video"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:textSize="14dp"
                        android:text="@string/hotel_video" />
                </LinearLayout>
            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="88">

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewImageZoom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                card_view:cardCornerRadius="20dp"
                card_view:cardElevation="10dp"
                card_view:cardUseCompatPadding="true"
                card_view:cardBackgroundColor="@color/ncLtBlue0">

                <!-- ImageView -->
                <com.github.chrisbanes.photoview.PhotoView
                    android:id="@+id/imageFullView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="string/description_zoom_touch_close" />
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
